crates/solidity/testing/snapshots/bindings_output/variables/var_declaration/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:4:9]
   │
 4 │ ╭─▶         var v = value;
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     struct Value { int x; }
   │            ──┬──       ┬  
   │              ╰──────────── name: 2
   │                        │  
   │                        ╰── name: 3
 3 │     function test(Value memory value) public {
   │              ──┬─ ──┬──        ──┬──  
   │                ╰────────────────────── name: 4
   │                     │            │    
   │                     ╰───────────────── ref: 2
   │                                  │    
   │                                  ╰──── name: 5
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭───▶ contract Test {
 2 │ │ │       struct Value { int x; }
   │ │ │   ──────────────┬──────┬──────  
   │ │ │                 ╰─────────────── definiens: 2
   │ │ │                        │        
   │ │ │                        ╰──────── definiens: 3
 3 │ │ ╭─▶     function test(Value memory value) public {
   │ │ │                     ─────────┬────────  
   │ │ │                              ╰────────── definiens: 5
   ┆ ┆ ┆   
 6 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 4
 7 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
